--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for nodejs
 - name: Install any necessary dependencies
-  apt:
+  dnf:
     name: "git"
     state: present
   become: true
