adding revocation of certificates as well as building a revocation list

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -60,3 +60,17 @@
     chdir: "{{easyrsa_dest}}/easyrsa3"
     creates: "{{easyrsa_dest}}/easyrsa3/pki/issued/{{item.name}}.crt"
   with_items: "{{ easyrsa_clients }}"
+
+- name: "Revoke certificates specified for revokation"
+  command: ./easyrsa revoke {{item.name}}
+  args:
+    chdir: "{{easyrsa_dest}}/easyrsa3"
+  register: result
+  ignore_errors: true
+  changed_when: result.rc == 1 and '"ERROR:Already revoked" in result.stderr_lines'
+  with_items: "{{ easyrsa_revoked_clients | default([]) }}"
+
+- name: "Create Certificate Revocation List"
+  command: ./easyrsa gen-crl
+  args:
+    chdir: "{{easyrsa_dest}}/easyrsa3"
